--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.21.1",
     "cron": "^1.8.2",
     "moment": "^2.29.1",
-    "moment-timezone": "^0.5.33"
+    "moment-timezone": "^0.5.33",
+    "nodeactyl": "^3.0.4"
   },
   "devDependencies": {},
   "description": ""
