--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "cron": "^1.8.2",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
-    "nodeactyl": "^3.0.4"
+    "nodeactyl": "^3.0.4",
+    "cron-parser": "^3.5.0"
   },
   "devDependencies": {},
   "description": ""
